<resources>
    <string name="app_name">Task Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="network">Network</string>
    <string name="english">English</string>
    <string name="work">Work</string>
    <string name="os">OS</string>
    <string name="other">Other</string>
    <string name="total">Total :</string>
    <string name="number">Number</string>
</resources>
